mlops-platform/dagster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dagster
