mlops-platform/dagster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster
  namespace: dagster
spec:
  ingressClassName: nginx
  rules:
    - host: dagster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dagster-dagster-webserver
                port:
                  number: 80
